syntax = "proto3";

option csharp_namespace = "RPlus.Kernel.Guard.Grpc";

package guard;

service GuardService {
  rpc Check (CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  string ip_address = 1;
  string route = 2;
  map<string, string> headers = 3;
}

message CheckResponse {
  bool is_allowed = 1;
  int32 decision_type = 2; // 0=Allow, 1=Throttle, 2=Challenge, 3=Block
  string reason = 3;
  int32 threat_level = 4;
  int32 ttl_seconds = 5;
  bool is_terminal = 6;
  string policy_id = 7;
  int32 effective_threat_level = 8;
}
